Fix evolution page (add spacing, clickable on pokemon evolution stages), fixing pokemon gif images

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -106,7 +106,7 @@ body::after {
   padding: 12px 16px;
   position: relative;
   height: 50px;
-  width: 310px;
+  width: 280px;
   max-width: 100%;
   overflow: hidden;
   box-shadow: 0 0 5px 1px rgba(2, 183, 255, 0.6), 
